# gpt-copywriter

./: README.md  chatbot.py  prompts.py  pyproject.toml
src/: prompts.py  read_pdfs.py
static/: styles.css
templates/: index.html
